# mltk-bary

./: CMakeLists.txt  avx.c  avx2.c  avx_bary.c  avx_bary2.c  avx_bary2b.c  make.sh
app/scopeToVoxel/: CMakeLists.txt  scopeToVoxel.c
src/: barycentric.avx.c  barycentric.cpu.c  barycentric.cu  resamplers.h
test/: CMakeLists.txt
test/barycentricAVX/: identity.c  internal.c  play.c
test/barycentricCPU/: identity.c  internal.c  play.c
test/barycentricGPU/: identity.c  internal.c  play.c
